Update start date for Basic Voice Offer

--- a/catalog/offers/voice-basic-offer.yaml
+++ b/catalog/offers/voice-basic-offer.yaml
@@ -1,5 +1,6 @@
 id: offer-voice-basic
 name: Basic Voice Offer
+name2: Basic Voice Offer
 description: 12-month contract, 0 EUR setup
 productOfferingPrice:
   - $ref: ../prices/price-zero-setup.yaml
@@ -8,4 +9,4 @@ bundledProductOffering:
 productSpecification:
   - $ref: ../products/mobile-voice.yaml
 validFor:
-  startDateTime: 2025-01-01T00:00:00Z
+  startDateTime: 2026-01-01T00:00:00Z
