--- a/catalog/offers/voice-basic-offer.yaml
+++ b/catalog/offers/voice-basic-offer.yaml
@@ -1,5 +1,5 @@
 id: offer-voice-basic
-name: Basic Voice Offer
+name: Basic Voice Offer2222
 name2: Basic Voice Offer
 description: 12-month contract, 0 EUR setup
 productOfferingPrice:
